# llamate

./: .env.example  .gitignore  README.md  memory_andy.json  pyproject.toml  setup.py  test_llamate.py
.github/workflows/: publish.yml
examples/: openai_assistant.py  simple_chatbot.py
llamate/: __init__.py  agent.py  backends.py  cli.py  config.py  vectorstore.py  vectorstore_marqo.py
llamate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llamate/llamate.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_agent.py  test_embedder.py  test_marqo_vectorstore.py  test_vectorstore.py
